// Vitest Snapshot v1

exports[`PasswordResetRequest > matches snapshot in en 1`] = `
<page
  class="auth password-reset-request"
  title="Reset your password"
>
  
  
  <form
    class="form auth-form"
    data-v-bb48cd11=""
    novalidate=""
  >
    <div
      class="email"
      data-v-bb48cd11=""
    >
      <label
        data-v-bb48cd11=""
        for="email"
      >
        Your email
      </label>
      <input
        class="c-form__input-field"
        data-v-bb48cd11=""
        name="email"
        placeholder="john.doe.at.example.com"
        type="email"
      />
      <!---->
    </div>
    <div
      class="submit"
      data-v-bb48cd11=""
    >
      <button
        class="loading-button"
        data-v-3fdbc7b3=""
        data-v-bb48cd11=""
      >
        <div
          class="label"
          data-v-3fdbc7b3=""
        >
          <span
            data-v-3fdbc7b3=""
          >
            Email me
          </span>
        </div>
        <!---->
      </button>
    </div>
  </form>
</page>
`;

exports[`PasswordResetRequest > matches snapshot in fr 1`] = `
<page
  class="auth password-reset-request"
  title="Reset your password[fr]"
>
  
  
  <form
    class="form auth-form"
    data-v-bb48cd11=""
    novalidate=""
  >
    <div
      class="email"
      data-v-bb48cd11=""
    >
      <label
        data-v-bb48cd11=""
        for="email"
      >
        Votre adresse mail
      </label>
      <input
        class="c-form__input-field"
        data-v-bb48cd11=""
        name="email"
        placeholder="john.doe.at.example.com"
        type="email"
      />
      <!---->
    </div>
    <div
      class="submit"
      data-v-bb48cd11=""
    >
      <button
        class="loading-button"
        data-v-3fdbc7b3=""
        data-v-bb48cd11=""
      >
        <div
          class="label"
          data-v-3fdbc7b3=""
        >
          <span
            data-v-3fdbc7b3=""
          >
            Email me
          </span>
        </div>
        <!---->
      </button>
    </div>
  </form>
</page>
`;
